Closed Bug 1579988 Opened 6 years ago Closed 6 years ago

Fix usage of nsIDocShellTreeItem in nsDocShell::SetTitle

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla73
Fission Milestone M6
Tracking Status
firefox73 --- fixed

People

(Reporter: djvj, Assigned: tetsuharu)

References

(Blocks 1 open bug)

Details

(Whiteboard: [rm-docshell-tree-item:simple])

Attachments

(1 file)

https://searchfox.org/mozilla-central/source/docshell/base/nsDocShell.cpp#5519

This code passes SetTitle information to the tree owner based on whether the current docshell is the top one (i.e. has no parent).

No other information is retrieved about parent docshells aside from their existence.

For Fission, this should be replaced by a check of the BrowsingContext tree for top-ness.

Fission Milestone: --- → M5
Priority: -- → P3
Priority: P3 → P2
Whiteboard: [rm-docshell-tree-item:simple]
Fission Milestone: M5 → Future

Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).

Fission Milestone: Future → M6

Can I take this? I have a (prototype) patch

@tetsuharu - absolutely. All the bugs were created to be picked up by anybody that was able to or wanted to fix them.

I've been using kmag and nika as reviewers for my patches. I'm not a DOM peer so I can't review unfortunately.

(In reply to Kannan Vijayan [:djvj] from comment #3)

@tetsuharu - absolutely. All the bugs were created to be picked up by anybody that was able to or wanted to fix them.

I've been using kmag and nika as reviewers for my patches. I'm not a DOM peer so I can't review unfortunately.

Thank you!

Assignee: nobody → tetsuharu.ohzeki
Status: NEW → ASSIGNED
Pushed by tetsuharu.ohzeki@gmail.com: https://hg.mozilla.org/integration/autoland/rev/f748822a58d0 Fix usage of nsIDocShellTreeItem in nsDocShell::SetTitle. r=kmag
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: