Bug 1579988 - Fix usage of nsIDocShellTreeItem in nsDocShell::SetTitle. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D57280

--HG--
extra : moz-landing-system : lando